# docs/swagger.yaml
@@ -13,6 +13,15 @@ definitions:
       type:
         $ref: '#/definitions/utils.TransactionType'
     type: object
+  requests.TransferRequest:
+    properties:
+      amount:
+        type: number
+      from_acount_id:
+        type: string
+      to_account_id:
+        type: string
+    type: object
   responses.Account:
     properties:
       balance:
@@ -25,6 +34,11 @@ definitions:
   responses.Error:
     properties:
       error:
+        type: string
+    type: object
+  responses.Message:
+    properties:
+      message:
         type: string
     type: object
   responses.Transaction:
@@ -199,6 +213,36 @@ paths:
           schema:
             $ref: '#/definitions/responses.Error'
       summary: Create a new transaction
+      tags:
+      - Transactions
+  /api/v1/transfer:
+    post:
+      consumes:
+      - application/json
+      description: Transfer funds from one account to another
+      parameters:
+      - description: Transfer details
+        in: body
+        name: transaction
+        required: true
+        schema:
+          $ref: '#/definitions/requests.TransferRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/responses.Message'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.Error'
+      summary: Transfer funds between accounts
       tags:
       - Transactions
 swagger: "2.0"
